--- a/config/config.yml
+++ b/config/config.yml
@@ -5,7 +5,7 @@ test:
   encoding: UTF-8
   connection_timeout: 30
   stream_context: false
-  location: https://83.218.157.188:443/test/khaosids.exe/soap/IKosWeb?wsdl
+  location: https://83.218.157.188/test/khaosids.exe/wsdl/IKosWeb?wsdl
   uri: http://tempuri.org/
 prod:
   exceptions: 1
